{{$NEXT}}

0.032     2019-11-11 11:09:08 EST
  - Add check for CORE::wantarray and CORE'wantarray to WantArray policy (simcop2387 #37)

0.031     2019-09-25 19:00:39 EDT
  - Add FindBin to DiscouragedModules policy (#31)
  - Add MultidimensionalArrayEmulation policy (#35)

0.030     2019-08-26 11:27:15 EDT
  - Allow signature_enablers to be configured for Prototypes policy (#34)

0.029     2019-04-26 13:12:43 EDT
  - Added LexicalForeachIterator policy
  - Require PPI 1.252+ allowing simplifications to the DeprecatedFeatures and
    WhileDiamondDefaultAssignment policies

0.028     2018-11-29 19:32:49 EST
  - Split out lower severity violations from DiscouragedModules policy into a
    new PreferredAlternatives policy. Perl::Critic does not support filtering
    individual violations by severity, only policies, so this will allow
    separately configuring and filtering these violations.
  - Fixed DiscouragedModules and DeprecatedFeatures policy violations to report
    severity as configured.
  - Fixed DeprecatedFeatures to avoid false positives on method calls with the
    same name as autoderef functions.
  - Added /\C/, chdir(''), and bare here-docs to DeprecatedFeatures policy.

0.027     2018-06-20 20:17:06 EDT
  - Add LoopOnHash policy

0.026     2018-02-16 20:50:14 EST
  - Update Prototypes policy to recognize more ways of activating the signatures feature

0.025     2018-02-11 01:31:58 EST
  - Fix DeprecatedFeatures to recognize correctly-parsed postderef in PPI 1.237+
  - Avoid warning from running PackageMatchesFilename policy on a document without a filename (willt #29)
  - Fix another false positive in DollarAB policy

0.024     2017-08-16 22:39:53 EDT
  - Make PackageMatchesFilename more robust against infinite loops

0.023     2017-08-16 22:22:40 EDT
  - Fix issue where PackageMatchesFilename policy would loop infinitely

0.022     2017-08-16 22:17:38 EDT
  - Also consider -W a violation of WarningsSwitch policy