@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Recommend Syntax::Keyword::Try as alternative to Error in DiscouragedModules
 
 0.032     2019-11-11 11:09:08 EST
   - Add check for CORE::wantarray and CORE'wantarray to WantArray policy (simcop2387 #37)
